verify-recaptcha/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verify-recaptcha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verify-recaptcha
  template:
    spec:
      containers:
        - name: verify-recaptcha
          image: gcr.io/com-seankhliao/verify-recaptcha:latest
          ports:
            containerPort: 8080
