verify-recaptcha/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verify-recaptcha
spec:
  type: ClusterIP
  selector:
    app: verify-recaptcha
  ports:
    - port: 80
      targetPort: 8080
